--- a/index.html
+++ b/index.html
@@ -8,22 +8,12 @@
 </head>
 <body>
     <h1>貪食蛇</h1>
-<!DOCTYPE html>
-<html lang="zh-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的貪食蛇</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>貪食蛇</h1>
     <div id="score">分數: 0</div>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <script src="script.js"></script>
-</body>
-</html>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <div id="gameControl">
+        <button id="startButton">開始遊戲</button>
+        <button id="restartButton" class="hidden">重新開始</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
